welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:35: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
				Motif()
                                     ^MethodsPicture:47: error: not found: value faireV
faireV(Color.yellow)
^MethodsPicture:48: error: not found: value faireV
faireV(Color.red)
^MethodsPicture:49: error: not found: value faireV
faireV(Color.blue)
^MethodsPicture:50: error: not found: value faireV
faireV(Color.green)
^MethodsPicture:29: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime89.MethodsPicture'
override def run()
             ^